force-app/main/default/objects/SPEN_DesignChecklistRequest__c/SPEN_DesignChecklistRequest__c.object-meta.xml
<CustomObject>
    <label>Design Checklist Request</label>
    <nameField>
        <displayFormat>CRN-{00000}</displayFormat>
        <label>Design Checklist Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Design Checklist Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>