force-app/main/default/objects/SPEN_DesignChecklistRequest__c/fields/SPEN_Comments__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Comments__c</fullName>
    <label>Comments</label>
    <length>150</length>
    <type>Text</type>
</CustomField>