force-app/main/default/objects/SPEN_DesignChecklistRequest__c/fields/SPEN_CompletedDesignInformation__c.field-meta.xml
<CustomField>
    <fullName>SPEN_CompletedDesignInformation__c</fullName>
    <label>Completed Design Information</label>
    <summaryFilterItems>
        <field>SPEN_DesignInformation__c.SPEN_CompletedStatus__c</field>
        <operation>equals</operation>
        <value>Yes</value>
    </summaryFilterItems>
    <summaryForeignKey>SPEN_DesignInformation__c.SPEN_DesignChecklist__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>