force-app/main/default/objects/SPEN_DesignChecklistRequest__c/fields/SPEN_DesignCompletion__c.field-meta.xml
<CustomField>
    <fullName>SPEN_DesignCompletion__c</fullName>
    <formula>(SPEN_CompletedDesignInformation__c  /  SPEN_TotalDesignInformation__c )  * 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Design Completion</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>