force-app/main/default/objects/SPEN_DesignChecklistRequest__c/fields/SPEN_Job__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Job__c</fullName>
    <label>Job</label>
    <referenceTo>SPEN_Job__c</referenceTo>
    <relationshipLabel>Design Checklist Requests</relationshipLabel>
    <relationshipName>Design_Checklist_Requests</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>