force-app/main/default/objects/SPEN_DesignChecklistRequest__c/fields/SPEN_TotalDesignInformation__c.field-meta.xml
<CustomField>
    <fullName>SPEN_TotalDesignInformation__c</fullName>
    <label>Total Design Information</label>
    <summaryFilterItems>
        <field>SPEN_DesignInformation__c.SPEN_CompletedStatus__c</field>
        <operation>notEqual</operation>
        <value>NA</value>
    </summaryFilterItems>
    <summaryForeignKey>SPEN_DesignInformation__c.SPEN_DesignChecklist__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>